fix: update layout and styling in various components for improved consistency and readability

--- a/app/globals.css
+++ b/app/globals.css
@@ -49,7 +49,7 @@
     --background: 240 10% 4%;
     --foreground: 0 0% 100%;
 
-    --card: 240 3% 12%;
+    --card: 240 3% 6%;
     --card-foreground: 60 19.1% 97.8%;
 
     --popover: 20 14.3% 4.1%;
@@ -67,7 +67,7 @@
     --accent: 12 6.5% 15.1%;
     --accent-foreground: 60 9.1% 97.8%;
 
-    --border: 12 6.5% 25.1%;
+    --border: 240 2% 13%;
     --input: 12 6.5% 15.1%;
     --ring: 24 5.7% 82.9%;
 
